Add UL of left nav Home-Communities

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Dashboard</title>
 </head>
 <body>
-    
+<div class="left-nav">
+<ul>
+    <li>Home</li>
+    <li>Profile</li>
+    <li>Messages</li>
+    <li>History</li>
+    <li>Tasks</li>
+    <li>Communities</li>
+</ul>
+</div>
 </body>
 </html>
