Add left nav UL Settings-Privacy

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <li>Tasks</li>
     <li>Communities</li>
 </ul>
+<ul>
+    <li>Settings</li>
+    <li>Support</li>
+    <li>Privacy</li>
+</ul>
 </div>
 </body>
 </html>
