Add text field, user name, notification button

--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
     <li>Privacy</li>
 </ul>
 </div>
+<div class="top-page">
+    <input type="text" id="search" name="search">
+
+    <img src="" id="profile-picture">
+    <p class="introduce-name">Hi there,</p>
+    <h2 class="Name-middle">Manny Sanz (@mannysanzz)</h2>
+    <img src="#" id="notification-button">
+</div>
 </body>
 </html>
