Add new upload share buttons

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <p class="introduce-name">Hi there,</p>
     <h2 class="Name-middle">Manny Sanz (@mannysanzz)</h2>
     <img src="#" id="notification-button">
+    <div class="new-post-buttons">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+    </div>
 </div>
 </body>
 </html>
