Add smaller pf space and name next to it

--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
     <input type="text" id="search" name="search">
 
     <img src="" id="profile-picture">
+
     <p class="introduce-name">Hi there,</p>
+
     <h2 class="Name-middle">Manny Sanz (@mannysanzz)</h2>
+
     <img src="#" id="notification-button">
+    <img src="#" id="small-pf">
+    <h3>Manny Sanz</h3>
+
     <div class="new-post-buttons">
         <button>New</button>
         <button>Upload</button>
