Start Creating Grid layout for topbar and leftnav

--- a/index.html
+++ b/index.html
@@ -10,39 +10,46 @@
     <title>Dashboard</title>
 </head>
 <body>
-<div class="left-nav">
-<ul>
-    <li>Home</li>
-    <li>Profile</li>
-    <li>Messages</li>
-    <li>History</li>
-    <li>Tasks</li>
-    <li>Communities</li>
-</ul>
-<ul>
-    <li>Settings</li>
-    <li>Support</li>
-    <li>Privacy</li>
-</ul>
-</div>
-<div class="top-page">
-    <input type="text" id="search" name="search">
-
-    <img src="" id="profile-picture">
-
-    <p class="introduce-name">Hi there,</p>
-
-    <h2 class="Name-middle">Manny Sanz (@mannysanzz)</h2>
-
-    <img src="#" id="notification-button">
-    <img src="#" id="small-pf">
-    <h3>Manny Sanz</h3>
-
-    <div class="new-post-buttons">
-        <button>New</button>
-        <button>Upload</button>
-        <button>Share</button>
+        <!-- Left Navigation -->
+    <div class="left-nav">
+        <h1 class="Dash">Dashboard</h1>
+        <ul class="home-com">
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+        </ul>
+        <ul class="setting-priv">
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
     </div>
-</div>
+            <!-- Top Page -->
+    <div class="top-page">
+        <input type="text" id="search" name="search">
+
+        <img src="" id="profile-picture">
+
+        <p class="introduce-name">Hi there,</p>
+
+        <h2 class="Name-middle">Manny Sanz (@mannysanzz)</h2>
+
+        <img src="#" id="notification-button">
+        <img src="#" id="small-pf">
+        <h3>Manny Sanz</h3>
+
+        <div class="new-post-buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
+    </div>
+          <!-- Main Board -->
+    <div class="project-container">
+
+    </div>
 </body>
 </html>
