Create and layout Projects section of the page. Move Projects section to its own CSS file

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="debug.css">
+    <link rel="stylesheet" href="debugcss">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="left-nav.css">
     <link rel="stylesheet" href="topSearch.css">
+    <link rel="stylesheet" href="projectArea.css">
+
    
     <title>Dashboard</title>
 </head>
@@ -126,11 +128,29 @@
     </div>
     </div>
           <!-- Main Board -->
-    <div class="project-container">
-        <h3>Your Projects</h3>
+
+        
+        <div class="project-container">
+            <h3 class="heading">Your Projects</h3>
         <div class="project1">
             <h3>Project1</h3>
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis molestie a iaculis at erat. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Quis lectus nulla at volutpat.
+            </p>
+        </div>
+        <div class="project2">
+            <h3>Project2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis molestie a iaculis at erat. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Quis lectus nulla at volutpat.
+            </p>
+        </div>
+        <div class="project3">
+            <h3>Project3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis molestie a iaculis at erat. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Quis lectus nulla at volutpat.
+            </p>
+        </div>
+        <div class="project4">
+            <h3>Project 4</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis molestie a iaculis at erat. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Quis lectus nulla at volutpat.
+            </p>
         </div>
     </div>
 </body>
